# EasytierGame

./: .gitignore  .npmrc  .prettierrc  LICENSE  README.md  app.vue  build.bat  nuxt.config.ts  package.json  pnpm-lock.yaml  tailwind.config.js  tailwind.config.mjs  tsconfig.json  zip.js
assets/css/: main.css
components/: CoreVersionWarning.vue
composables/: configJson.ts  icon.ts  log.ts  netcard.ts  server.ts  theme.ts  tray.ts  windows.ts
env/: .env.dev  .env.prod
layouts/: default.vue
pages/: advance.vue  cidr.vue  gameList.vue  index.vue  log.vue  member.vue  nodesList.vue  server.vue  storage-listener.vue  tool.vue
plugins/: pinia.ts
src-tauri/: .gitignore  Cargo.toml  build.rs  clear_data.bat  tauri.conf.json  帮助.txt
src-tauri/capabilities/: default.json
src-tauri/easytier/: README.md  clear_local_data.bat  config_template.json  帮助.txt
src-tauri/easytier/config/: config_template.toml  test.toml
src-tauri/src/: lib.rs
stores/: index.ts
typings/: index.d.ts
utils/: element.ts  index.ts  service.ts
utils/_self/: readme.txt
