[package]
name = "easytier-game"
version = "1.3.5"
homepage = "https://github.com/EasyTier/EasyTier"
repository = "https://github.com/EasyTier/EasytierGame"
description = "A simple network initiator based on Easytier"
authors = ["leizi97"]
license = "LICENSE"

edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }
# prost-build = "0.13.2"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.1.1", features = [
    "tray-icon",
    "image-png",
    "image-ico",
] }

tauri-plugin-log = "2.2.0"
tauri-plugin-shell = "2.2.0"
reqwest = { version = "0.12", features = ["json"] }
zip = "2.2"
sysinfo = '0.32.0'
planif = { git = "https://github.com/mattrobineau/planif", tag = "1.0.1" }
whoami = "1.5.2"
tauri-plugin-fs = "2.2.0"
tauri-plugin-clipboard-manager = "2.0.2"
rand = "0.8.5"
tokio = { version = "1.41.1", features = ["process"] }
tauri-plugin-dialog = "2"
# prost = "0.13"
# prost-types = "0.13"


[dependencies.windows]
version = "0.58.0"
features = ["Win32_System_TaskScheduler", "Win32_System_Power", "Win32_NetworkManagement_IpHelper", "Win32_NetworkManagement_Ndis", "Win32_Networking_WinSock"]

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-cli = "2.2.0"
tauri-plugin-single-instance = "2.2.0"
tauri-plugin-window-state = "2.2.0"
