[package]
name = "easytier-game"
version = "1.4.7"
homepage = "https://github.com/EasyTier/EasyTier"
repository = "https://github.com/EasyTier/EasytierGame"
description = "A simple network initiator based on Easytier"
authors = ["leizi97"]
license = "LICENSE"

edition = "2021"
# rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.0", features = [] }
# prost-build = "0.13.2"

[target.x86_64-pc-windows-msvc.build-dependencies]
thunk-rs = { git = "https://github.com/easytier/thunk.git", default-features = false, features = ["win7"] } # 需要安装curl和7zip，并添加他们的路径到环境变量

[dependencies]
serde_json = "1.0.137"
serde = { version = "1.0.217", features = ["derive"] }
log = "0.4.26"
tauri = { version = "2.6.2", features = [ "protocol-asset",
    "tray-icon",
    "image-png",
    "image-ico"
] }

tauri-plugin-log = "2.6.0"
tauri-plugin-shell = "2.3.0"
reqwest = { version = "0.12.12", features = ["json"] }
zip = "2.2.3"
sysinfo = '0.33.1'
# planif = { git = "https://github.com/mattrobineau/planif", tag = "1.0.1" }
whoami = "1.5.2"
tauri-plugin-fs = "2.4.0"
tauri-plugin-clipboard-manager = "2.3.0"
rand = "0.9.0"
tokio = { version = "1.45.1", features = ["process"] }
tauri-plugin-dialog = "2.3.0"
# prost = "0.13"
# prost-types = "0.13"
hashbrown = "0.15.2"
# futures-util = "0.3"

[dependencies.windows]
version = "0.61.3"
features = ["Win32_System_TaskScheduler", "Win32_System_Com", "Win32_System_Power", "Win32_NetworkManagement_IpHelper", "Win32_NetworkManagement_Ndis", "Win32_Networking_WinSock"]

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-cli = "2.4.0"
tauri-plugin-single-instance = "2.3.0"
tauri-plugin-window-state = "2.3.0"
